# localinter

./: README.md  build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/xirion/localinter/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/xirion/localinter/: MainActivity.java  PythonBridge.java
app/src/main/python/: pycore.py
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/xirion/localinter/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
python/: pycore.py
